# django-keycloak-auth

./: LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  install.txt  manage.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
core/: models.py  serializers.py  urls.py  views.py
core/fixtures/: banks.json
core/migrations/: 0001_initial.py
django-keycloak-auth/: keycloak.py  middleware.py  settings.py  tests.py  urls.py  wsgi.py
django_keycloak_auth/: __init__.py  decorators.py  keycloak.py  middleware.py  settings.py  tests.py  urls.py  wsgi.py
keycloak-auth/: keycloak.py  middleware.py  settings.py  tests.py  urls.py  wsgi.py
