[metadata]
name = django-keycloak-auth
version = 0.1
description = Django Rest Framework Keycloak Auth by Roles.
long_description = file: README.rst
url = https://github.com/marcelo225/keycloak-auth
author = Marcelo Vinicius
author_email = mr.225@hotmail.com
license = MIT License
classifiers =
    Framework :: Django    
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
include_package_data = true
packages = find: